--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.5.1"
 
     //DI
-    implementation "com.google.dagger:dagger:2.45"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.45"
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
